# rs_blog_server

./: .env  .gitignore  Cargo.toml  README.md
migrations/2020-01-12-104039_blog/: up.sql
src/: db.rs  error.rs  logger.rs  main.rs  models.rs  schema.rs  utils.rs
src/api/: user.rs
src/db/: user.rs
src/models/: msg.rs  user.rs
