[package]
name = "a"
version = "0.1.0"
authors = ["Jesse <szx961102@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix="0.9.0"
actix-web = "2.0"
actix-rt = "1.0"
actix-cors = "0.2"
listenfd = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel =  { version = "1.4", features = ["postgres","r2d2","chrono","serde_json"] }
dotenv = "0.15"
derive_more = "0.99.2"
jsonwebtoken = "7.0.0-alpha.2"
lazy_static = "1.4"
regex = "1.3"
fern = "0.5.9"
log = "0.4.8"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
chrono =  { version = "0.4.10", features = ["serde"] }
#blake3 = "0.1"
rust-argon2 = "0.6"
failure = "0.1"